# pydantic-ai-pdf-rag-agent

./: .cursorrules  .env.example  .gitignore  README.md  ai_provider_implementation.md  mypy.ini  output.json  package-lock.json  package.json  prd-project.md  pyproject.toml  pyrightconfig.json  requirements.txt
.Trash-1000/info/: Untitled.ipynb.trashinfo
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.override.yml  docker-compose.yml  post-create.sh  restart_ollama.sh
.project_prds/: cursor_rules_to_add.md  new-responsive-model-refactor.md  prd-backend.md  prd-frontend.md  prd-new-backend-AI-analyzer.md  prd-non-blank-subcategory-issue.md  prd-project-notes.md
app/: pdf_reader.py  pdf_reader_ForGettingDiagramExtraction.py  pdf_reader_No_Longer_Used.py
app/core/: __init__.py  chat_service.py  config.py  parsers.py  pdf_processor.py  process_compare.py  process_difference.py  process_pdf.py  vector_store.py  working_specs_no_features_adv_parsers.py
app/core/comparison/: __init__.py  analyzer.py  service.py
app/core/pdf/: __init__.py  processor.py
app/models/: __init__.py  ai_findings.py  base.py  chat.py  comparison working_wrapped_leakage_current_190R.py  comparison.py  differences.py  embedding.py  features.py  llm_findings.py  pdf.py  pdf_tables.py  transformers.py  vector.py  working_specs_no_features_adv_comparison.py  working_specs_no_features_adv_pdf.py
app/models/working/: features_processor.py
app/routers/: __init__.py  chat.py  pdf.py
app/schemas/: chat.py
app/services/: __init__.py
app/tests/: test_pdf_processor.py
app/working/: main.py  pdf_reader_DEPRECATED.py
backend/: prd-backend.md  requirements.txt  requirements_renamed.txt  setup.py
backend/backups/: ai_findings.py  comparison.py  requirements.txt
backend/src/: __init__.py
backend/src/app/: __init__.py  main.py  pdf_reader_ForGettingDiagramExtraction.py
backend/tests/unit/: conftest.py
data/: vector_store.json
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/api/: analysis.ts
frontend/src/components/: ComparisonView.tsx  ErrorBoundary.tsx  (+1 more)
ollama_profiler/: __init__.py  ollama_profiler.py  ollama_ui.py
ollama_profiler/.ipynb_checkpoints/: ollama_profiler-checkpoint.ipynb  ollama_profiler-checkpoint.py
ollama_profiler/notebooks/: ollama_profiler.ipynb
scripts/: compare_processors.py  examine_pdf.py  examine_pdf_pdfplumber_parsing_with_features.py  json_pdf.json  pdfplumber_test.py  process_pdfs.py  raw_comparison.py  test_comparison.py  test_pdf_processor.py  working_specs_but_no_features-adv_examine_pdf_pdfplumber_parsing copy.py
src/hsi_pdf_agent/: main.py
src/scripts/: pdfplumber_test.py  process_pdfs.py  test_pdf_comparison.py  test_pdf_processor.py
tests/: composer_output  conftest.py
tests/data/: model_specs.json
tests/unit/: correct_output  test_chat_service.py  test_vector_store.py
(+81 files in other folders)
